Fixed spacing on leadership description.

--- a/_sass/modern-resume-theme.scss
+++ b/_sass/modern-resume-theme.scss
@@ -103,7 +103,7 @@ ul.icons a {
   }
 }
 
-.experience, .education, .project {
+.experience, .education, .project, .leadership {
   margin-top: 3em;
 
   .left-column {
